# DeepDFT

./: setup.cfg
deepdft/: dataset.py  densitymodel.py  evaluate_model.py  predict_with_model.py  runner.py
