[metadata]
name = deepdft
version = 
author = 
author_email = 
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = deepdft
python_requires = >=3.6
install_requires =
    ase
    torch
    numpy
    asap3
    lz4
    sklearn
    
include_package_data = True

[options.package_data]
    deepdft = qm9_pretrained_model/*, single_atom_reference/*

[options.entry_points]
console_scripts =
    deepdft = deepdft.predict_with_model:main